--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3309/o2o?useUnicode=true&characeterEnconding=utf-8
+#jdbc.url=jdbc:mysql://localhost:3309/o2o?useUnicode=true&characeterEnconding=utf-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
+jdbc.master.url=jdbc:mysql://192.168.112.135:3306/o2o?useUnicode=true&characterEncoding=utf8
+jdbc.slave.url=jdbc:mysql://192.168.112.136:3306/o2o?useUnicode=true&characterEncoding=utf8
