--- a/pom.xml
+++ b/pom.xml
@@ -146,20 +146,9 @@
 			<artifactId>kaptcha</artifactId>
 			<version>2.3.2</version>
 		</dependency>
-		<!-- 图片处理 -->
-		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
-		<dependency>
-			<groupId>net.coobird</groupId>
-			<artifactId>thumbnailator</artifactId>
-			<version>0.4.8</version>
-		</dependency>
-		<!-- kaptcha实现验证码 -->
-		<dependency>
-			<groupId>com.github.penggle</groupId>
-			<artifactId>kaptcha</artifactId>
-			<version>2.3.2</version>
-	 	</dependency>
+
 	</dependencies>
+
 	<build>
 		<finalName>o2o</finalName>
 		<plugins>
@@ -174,12 +163,13 @@
 					<encoding>UTF8</encoding>
 				</configuration>
 			</plugin>
+
+
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
 				<configuration>
-					<path>/</path>
+					<path>/o2o</path>
 					<port>8080</port>
 				</configuration>
 			</plugin>
